Fix indentation and formatting of firebaseConfig

--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@
 
   // 你的专属配置
   const firebaseConfig = {
-    apiKey: "AIzaSyBC92jwiCLsfG6bE4k2Jo4KQSiI-A_gxII",
-    authDomain: "bloxd-survival.firebaseapp.com",
-    projectId: "bloxd-survival",
-    storageBucket: "bloxd-survival.firebasestorage.app",
-    messagingSenderId: "60666065786",
-    appId: "1:60666065786:web:bdc3131accaceb0180dcc3",
-    measurementId: "G-L39F7GPMF4"
+    const firebaseConfig = {
+  apiKey: "AIzaSyBC92jwiCLsfG6bE4k2Jo4KQSiI-A_gxII",
+  authDomain: "bloxd-survival.firebaseapp.com",
+  projectId: "bloxd-survival",
+  storageBucket: "bloxd-survival.firebasestorage.app",
+  messagingSenderId: "60666065786",
+  appId: "1:60666065786:web:bdc3131accaceb0180dcc3",
+  measurementId: "G-L39F7GPMF4"
+};
   };
 
   const app = initializeApp(firebaseConfig);
