--- a/index.html
+++ b/index.html
@@ -5,151 +5,168 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生存法则 - 官方社区</title>
     <style>
-        :root { --main-green: #2ecc71; --card-bg: #161b22; --text-gray: #8b949e; }
-        body { background-color: #0d1117; color: white; font-family: 'Segoe UI', sans-serif; margin: 0; text-align: center; }
-        nav { display: flex; justify-content: space-between; padding: 15px 50px; align-items: center; background: #161b22; border-bottom: 1px solid #30363d; }
-        .logo { color: var(--main-green); font-size: 24px; font-weight: bold; text-decoration: none; }
-        .auth-btn { background: var(--main-green); color: black; border: none; padding: 8px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; }
-        .hero { padding: 60px 20px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; max-width: 1000px; margin: 20px auto; padding: 0 20px; }
-        .card { background: var(--card-bg); padding: 30px; border-radius: 10px; border: 1px solid #30363d; cursor: pointer; transition: 0.3s; }
-        .card:hover { border-color: var(--main-green); transform: translateY(-5px); }
+        :root { --main-green: #2ecc71; --card-bg: #161b22; --border: #30363d; }
+        body { background-color: #0d1117; color: white; font-family: 'Segoe UI', sans-serif; margin: 0; overflow-x: hidden; }
         
-        /* 登录弹窗样式 */
-        .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #21262d; padding: 30px; border-radius: 10px; border: 2px solid var(--main-green); z-index: 1000; width: 320px; box-shadow: 0 0 20px rgba(0,0,0,0.5); }
-        .modal h3 { margin-top: 0; color: var(--main-green); }
-        .modal input { width: 90%; padding: 12px; margin: 8px 0; border-radius: 5px; border: 1px solid #30363d; background: #0d1117; color: white; }
-        .modal-btns { display: flex; flex-direction: column; gap: 10px; margin-top: 15px; }
-        .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 999; }
-        .user-tag { color: var(--main-green); font-weight: bold; margin-right: 15px; }
+        /* 导航与基础样式 */
+        nav { display: flex; justify-content: space-between; padding: 15px 30px; align-items: center; background: #161b22; border-bottom: 1px solid var(--border); }
+        .logo { color: var(--main-green); font-size: 22px; font-weight: bold; text-decoration: none; }
+        .auth-btn { background: var(--main-green); color: black; border: none; padding: 8px 18px; border-radius: 5px; cursor: pointer; font-weight: bold; }
+
+        /* 通知系统 (替代 Alert) */
+        #toast-container { position: fixed; top: 20px; right: 20px; z-index: 9999; }
+        .toast { background: #21262d; border-left: 4px solid var(--main-green); color: white; padding: 15px 25px; margin-bottom: 10px; border-radius: 4px; box-shadow: 0 4px 12px rgba(0,0,0,0.5); animation: slideIn 0.3s ease; }
+        @keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0); } }
+
+        /* 聊天室面板 */
+        #chat-panel { display: none; position: fixed; bottom: 20px; right: 20px; width: 350px; height: 500px; background: #161b22; border: 1px solid var(--main-green); border-radius: 10px; flex-direction: column; z-index: 1000; }
+        #chat-header { padding: 10px; background: #21262d; border-bottom: 1px solid var(--border); display: flex; justify-content: space-between; }
+        #chat-messages { flex: 1; overflow-y: auto; padding: 10px; display: flex; flex-direction: column; gap: 8px; }
+        .msg { background: #30363d; padding: 8px; border-radius: 5px; max-width: 80%; font-size: 14px; }
+        .msg b { color: var(--main-green); display: block; font-size: 12px; }
+        #chat-input-area { padding: 10px; display: flex; gap: 5px; border-top: 1px solid var(--border); }
+        #chat-input-area input { flex: 1; background: #0d1117; border: 1px solid var(--border); color: white; padding: 5px; border-radius: 3px; }
+
+        /* 网格布局 */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; max-width: 1100px; margin: 40px auto; padding: 0 20px; }
+        .card { background: #161b22; padding: 25px; border-radius: 8px; border: 1px solid var(--border); cursor: pointer; transition: 0.3s; }
+        .card:hover { border-color: var(--main-green); transform: translateY(-3px); }
+
+        /* 注册弹窗 */
+        .modal-overlay { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index: 2000; }
+        .modal { position: absolute; top:50%; left:50%; transform:translate(-50%,-50%); background:#21262d; padding:30px; border-radius:10px; width:300px; border:1px solid var(--main-green); }
+        .modal input { width:100%; margin: 10px -10px; padding:10px; background:#0d1117; border:1px solid var(--border); color:white; border-radius:5px; }
     </style>
 </head>
 <body>
 
+<div id="toast-container"></div>
+
 <nav>
-    <a href="#" class="logo">生存法则</a>
-    <div id="auth-ui">
-        <button class="auth-btn" onclick="showModal()">登录 / 注册</button>
-    </div>
+    <a href="#" class="logo">生存法则 · 社区</a>
+    <div id="auth-ui"></div>
 </nav>
 
-<div class="hero">
-    <h1 id="welcome-msg">生存法则 · 官方社区</h1>
-    <p style="color:var(--text-gray)">搜集物资、交易货品、探索未知地图</p>
-</div>
-
 <div class="grid">
-    <div class="card" onclick="checkAuth('组队大厅')"><h3>组队大厅</h3><p>寻找队友并肩作战</p></div>
-    <div class="card" onclick="checkAuth('交易行')"><h3>交易行</h3><p>安全的物资买卖中心</p></div>
-    <div class="card" onclick="checkAuth('兑换码')"><h3>兑换码</h3><p>领取限时物资奖励</p></div>
+    <div class="card" onclick="openChat()"><h3>💬 组队大厅</h3><p>实时在线聊天，寻找队友</p></div>
+    <div class="card" onclick="notify('交易行系统维护中，预计明天开放')"><h3>⚖️ 交易行</h3><p>玩家物资互换中心</p></div>
+    <div class="card" onclick="notify('暂无可用兑换码')"><h3>🎁 兑换码</h3><p>领取社区专属礼包</p></div>
 </div>
 
-<div class="overlay" id="overlay" onclick="hideModal()"></div>
-<div class="modal" id="auth-modal">
-    <h3 id="modal-title">加入社区</h3>
-    <input type="text" id="reg-nickname" placeholder="游戏昵称">
-    <input type="text" id="reg-id" placeholder="账号 ID (下次登录用)">
-    <input type="password" id="reg-pw" placeholder="设置密码">
-    <input type="password" id="reg-pw-confirm" placeholder="确认密码">
-    <div class="modal-btns">
-        <button class="auth-btn" onclick="handleRegister()">立即注册</button>
-        <p style="font-size: 12px; color: var(--text-gray); cursor: pointer;" onclick="switchToLogin()">已有账号？去登录</p>
+<div id="chat-panel">
+    <div id="chat-header">
+        <span>组队大厅聊天室</span>
+        <button onclick="closeChat()" style="background:none; border:none; color:white; cursor:pointer;">✖</button>
+    </div>
+    <div id="chat-messages"></div>
+    <div id="chat-input-area">
+        <input type="text" id="msg-input" placeholder="输入消息...">
+        <button class="auth-btn" onclick="sendMsg()" style="padding:5px 10px">发送</button>
     </div>
 </div>
 
-<div class="modal" id="login-modal">
-    <h3>欢迎回来</h3>
-    <input type="text" id="login-id" placeholder="输入账号 ID">
-    <input type="password" id="login-pw" placeholder="输入密码">
-    <div class="modal-btns">
-        <button class="auth-btn" onclick="handleLogin()">登录</button>
-        <p style="font-size: 12px; color: var(--text-gray); cursor: pointer;" onclick="switchToRegister()">没账号？去注册</p>
+<div class="modal-overlay" id="modal-overlay">
+    <div class="modal">
+        <h3 style="margin:0">创建账号</h3>
+        <input type="text" id="reg-name" placeholder="游戏昵称">
+        <input type="text" id="reg-id" placeholder="登录 ID">
+        <input type="password" id="reg-pw" placeholder="密码">
+        <button class="auth-btn" style="width:100%; margin-top:10px" onclick="doRegister()">确定注册</button>
     </div>
 </div>
 
-<script>
-    let currentUser = JSON.parse(localStorage.getItem('survival_user'));
+<script type="module">
+    // 引入 Firebase 功能
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getFirestore, collection, addDoc, query, orderBy, limit, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-    // 页面加载检查登录状态
-    window.onload = () => { updateUI(); };
-
-    window.showModal = () => { switchToRegister(); document.getElementById('overlay').style.display = 'block'; };
-    window.hideModal = () => { 
-        document.getElementById('auth-modal').style.display = 'none'; 
-        document.getElementById('login-modal').style.display = 'none';
-        document.getElementById('overlay').style.display = 'none'; 
+    const firebaseConfig = {
+        apiKey: "AIzaSyBC92jwiCLsfG6bE4k2Jo4KQSiI-A_gxII", // 已更正拼写
+        authDomain: "bloxd-survival.firebaseapp.com",
+        projectId: "bloxd-survival",
+        storageBucket: "bloxd-survival.firebasestorage.app",
+        messagingSenderId: "60666065786",
+        appId: "1:60666065786:web:bdc3131accaceb0180dcc3"
     };
 
-    window.switchToLogin = () => {
-        document.getElementById('auth-modal').style.display = 'none';
-        document.getElementById('login-modal').style.display = 'block';
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    let currentUser = JSON.parse(localStorage.getItem('user'));
+
+    // 自定义通知函数 (替代 Alert)
+    window.notify = (text) => {
+        const container = document.getElementById('toast-container');
+        const toast = document.createElement('div');
+        toast.className = 'toast';
+        toast.innerText = text;
+        container.appendChild(toast);
+        setTimeout(() => toast.remove(), 3000);
     };
 
-    window.switchToRegister = () => {
-        document.getElementById('login-modal').style.display = 'none';
-        document.getElementById('auth-modal').style.display = 'block';
-        document.getElementById('overlay').style.display = 'block';
-    };
-
-    // 注册逻辑
-    window.handleRegister = () => {
-        const name = document.getElementById('reg-nickname').value;
-        const id = document.getElementById('reg-id').value;
-        const pw = document.getElementById('reg-pw').value;
-        const pwc = document.getElementById('reg-pw-confirm').value;
-
-        if(!name || !id || !pw) return alert("请填写完整信息！");
-        if(pw !== pwc) return alert("两次密码输入不一致！");
-        if(localStorage.getItem('user_' + id)) return alert("该 ID 已被注册！");
-
-        const userData = { name, id, pw };
-        localStorage.setItem('user_' + id, JSON.stringify(userData));
-        localStorage.setItem('survival_user', JSON.stringify(userData));
-        currentUser = userData;
-        alert("注册成功！欢迎你，" + name);
-        hideModal();
-        updateUI();
-    };
-
-    // 登录逻辑
-    window.handleLogin = () => {
-        const id = document.getElementById('login-id').value;
-        const pw = document.getElementById('login-pw').value;
-        const savedData = localStorage.getItem('user_' + id);
-
-        if(!savedData) return alert("账号不存在！");
-        const user = JSON.parse(savedData);
-        if(user.pw !== pw) return alert("密码错误！");
-
-        localStorage.setItem('survival_user', JSON.stringify(user));
-        currentUser = user;
-        alert("登录成功！");
-        hideModal();
-        updateUI();
-    };
-
-    window.logout = () => {
-        localStorage.removeItem('survival_user');
-        currentUser = null;
-        updateUI();
-    };
-
-    window.checkAuth = (target) => {
-        if(!currentUser) return alert("请先登录账号！");
-        alert("正在进入 " + target + "...");
-    };
-
-    function updateUI() {
+    // 登录界面更新
+    window.updateUI = () => {
         const ui = document.getElementById('auth-ui');
-        const welcome = document.getElementById('welcome-msg');
-        if (currentUser) {
-            welcome.innerText = "欢迎回来, " + currentUser.name;
-            ui.innerHTML = `<span class="user-tag">ID: ${currentUser.id}</span><button class="auth-btn" style="background:#e74c3c; color:white;" onclick="logout()">退出</button>`;
+        if(currentUser) {
+            ui.innerHTML = `<span style="margin-right:15px">${currentUser.name}</span><button class="auth-btn" onclick="logout()" style="background:#e74c3c">退出</button>`;
         } else {
-            welcome.innerText = "生存法则 · 官方社区";
-            ui.innerHTML = `<button class="auth-btn" onclick="showModal()">登录 / 注册</button>`;
+            ui.innerHTML = `<button class="auth-btn" onclick="showReg()">注册 / 登录</button>`;
         }
+    };
+
+    window.showReg = () => document.getElementById('modal-overlay').style.display = 'block';
+    window.logout = () => { localStorage.removeItem('user'); location.reload(); };
+
+    window.doRegister = () => {
+        const name = document.getElementById('reg-name').value;
+        const id = document.getElementById('reg-id').value;
+        if(!name || !id) return notify("请填写完整！");
+        currentUser = { name, id };
+        localStorage.setItem('user', JSON.stringify(currentUser));
+        document.getElementById('modal-overlay').style.display = 'none';
+        notify("欢迎加入, " + name);
+        updateUI();
+    };
+
+    // 聊天室逻辑
+    window.openChat = () => {
+        if(!currentUser) return notify("请先注册/登录账号！");
+        document.getElementById('chat-panel').style.display = 'flex';
+        loadMessages();
+    };
+    window.closeChat = () => document.getElementById('chat-panel').style.display = 'none';
+
+    function loadMessages() {
+        const q = query(collection(db, "messages"), orderBy("createdAt", "asc"), limit(50));
+        onSnapshot(q, (snapshot) => {
+            const box = document.getElementById('chat-messages');
+            box.innerHTML = '';
+            snapshot.forEach(doc => {
+                const data = doc.data();
+                const div = document.createElement('div');
+                div.className = 'msg';
+                div.innerHTML = `<b>${data.user}</b>${data.text}`;
+                box.appendChild(div);
+            });
+            box.scrollTop = box.scrollHeight;
+        });
     }
+
+    window.sendMsg = async () => {
+        const input = document.getElementById('msg-input');
+        if(!input.value) return;
+        try {
+            await addDoc(collection(db, "messages"), {
+                text: input.value,
+                user: currentUser.name,
+                createdAt: serverTimestamp()
+            });
+            input.value = '';
+        } catch (e) {
+            notify("发送失败，请确保已开启 Firestore 数据库");
+        }
+    };
+
+    updateUI();
 </script>
 </body>
 </html>
