--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>逃离块科夫 · Survival Rules</title>
+    <title>生存法则 · Survival Rules</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root { --neon: #2ecc71; --bg: #05080a; --card: rgba(25, 27, 31, 0.8); --border: rgba(46, 204, 113, 0.2); }
@@ -44,7 +44,7 @@
 </nav>
 
 <div class="container">
-    <h1 style="font-size: 50px; margin: 0;">逃离块科夫</h1>
+    <h1 style="font-size: 50px; margin: 0;">生存法则</h1>
     <p style="color: #666; font-size: 18px;">搜集物资 · 交易货品 · 探索未知地图</p>
     
     <div class="grid">
@@ -57,7 +57,8 @@
         <div class="card" onclick="alert('功能开发中')"><span class="icon">🔄</span><h3>更新日志</h3><p>查看最新更新内容</p></div>
         <div class="card" onclick="alert('环境维护中')"><span class="icon">🚫</span><h3>处罚名单</h3><p>查看违规处罚记录</p></div>
     </div>
-</div><div id="auth-modal" class="modal">
+</div>
+<div id="auth-modal" class="modal">
     <div class="modal-content">
         <h2 id="auth-title">验证身份</h2>
         <input type="text" id="a-id" placeholder="生存 ID">
